reworking directory structure and module load to be more towards PEP standards

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# Created by https://www.gitignore.io/api/python
+
+### Exclude config files ###
+config/script.conf
+templates/template.conf
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
